// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PSJ Runtime Scenarios .restart hard will disconnect & reset data: stdOut 1`] = `
"Connecting ... 
Connecting to serial device at /dev/ttyACM0
> const y = 1;
> .restart --hard
Device restarting
Disconnecting ... 
> .connect
Connecting ... 
Connecting to serial device at /dev/ttyACM0
> y
ERR: y is not defined
> "
`;

exports[`PSJ Runtime Scenarios .restart soft will resets all data: stdOut 1`] = `
"Connecting ... 
Connecting to serial device at /dev/ttyACM0
> const y = 1;
> .restart
Device restarting
> y
ERR: y is not defined
> "
`;

exports[`PSJ Runtime Scenarios repl executes javascript: stdOut 1`] = `
"Connecting ... 
Connecting to serial device at /dev/ttyACM0
> const y = 1;
> y
1
> "
`;
